modified some p tags

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
       <div class="container-lg">
-        <a class="navbar-brand fw-bold" href="#">Karim Sardouk</a>
+        <a class="navbar-brand fw-bold" href="#">random user</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -75,7 +75,7 @@
       <div class="container-lg">
         <div class="row align-items-center">
           <div class="col-sm-6">
-            <h1 class="display-4 fw-bold">Karim Sardouk</h1>
+            <h1 class="display-4 fw-bold">random user</h1>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
               rutrum laoreet finibus. Sed porta lobortis metus sed commodo.
@@ -141,17 +141,15 @@
       <div class="container">
         <h2 class="display-5 fw-bold mb-4">About Me</h2>
         <p>
-          Fresh graduate in Business Administration & Management from Saint
-          Joseph University. During my time in university, I held a leadership
-          position as a student-ambassador of the Career and Placement Office.
-          I’m a strong communicator with excellent writing and verbal skills.
-          I’m also proficient in English, Arabic and French. The completion of
-          two internships in this field has provided me with valuable
-          experiences. This allowed me to further develop my communication,
-          problem-solving, organization, presentation and reporting skills. I’m
-          eager to use my skills and experience in an organization where I can
-          have a greater impact. For that purpose, I’m seeking an entry-level
-          position in Finance or as a Business Analyst.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+          rutrum laoreet finibus. Sed porta lobortis metus sed commodo.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+          rutrum laoreet finibus. Sed porta lobortis metus sed commodo.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+          rutrum laoreet finibus. Sed porta lobortis metus sed commodo.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+          rutrum laoreet finibus. Sed porta lobortis metus sed commodo.
+          
         </p>
       </div>
     </section>
